Update use-custom-java-startup-arguments.md